[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/level_components/range_thresholds/range_threshold.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=14]
margin = 0.001
extents = Vector3( 1.468, 1.5, 0.0992771 )

[sub_resource type="BoxShape" id=15]
margin = 0.001
extents = Vector3( 1.465, 0.04, 1.5 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.423529, 0.423529, 0.423529, 1 )

[sub_resource type="CylinderMesh" id=1]
material = SubResource( 9 )
top_radius = 0.07
bottom_radius = 0.07
height = 3.0
radial_segments = 6
rings = 2

[sub_resource type="ConvexPolygonShape" id=17]
points = PoolVector3Array( -3.72529e-09, 1.5, 0.07, 0.0606218, 1.5, 0.035, -0.0606218, 1.5, 0.0349863, -3.72529e-09, -1.5, 0.07, 0.0606099, 1.5, -0.0350137, 0.0606218, -1.5, 0.035, -0.0606218, 1.5, -0.035, -0.0606218, -1.5, 0.0349863, -3.72529e-09, 1.5, -0.07, 0.0606099, -1.5, -0.0350137, -0.0606218, -1.5, -0.035, -3.72529e-09, -1.5, -0.07 )

[sub_resource type="SpatialMaterial" id=12]
params_cull_mode = 2

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.645455, 0.915909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0522727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 0, 1.5, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.8
scale_curve = SubResource( 4 )

[sub_resource type="QuadMesh" id=6]
size = Vector2( 0.1, 0.02 )

[sub_resource type="PlaneMesh" id=7]
size = Vector2( 3, 3 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.235294, 0.894118, 0.211765, 0.509804 )

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.898039, 0.658824, 0.352941, 0.509804 )

[sub_resource type="ConvexPolygonShape" id=18]
points = PoolVector3Array( -3.72529e-09, 1.5, 0.07, 0.0606218, 1.5, 0.035, -0.0606218, 1.5, 0.0349863, -3.72529e-09, -1.5, 0.07, 0.0606099, 1.5, -0.0350137, 0.0606218, -1.5, 0.035, -0.0606218, 1.5, -0.035, -0.0606218, -1.5, 0.0349863, -3.72529e-09, 1.5, -0.07, 0.0606099, -1.5, -0.0350137, -0.0606218, -1.5, -0.035, -3.72529e-09, -1.5, -0.07 )

[node name="RangeThreshold" type="Spatial"]
script = ExtResource( 1 )

[node name="EntryDetectionArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1.5, 0.100016 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="EntryDetectionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0375181 )
shape = SubResource( 14 )

[node name="PassedThroughDetectionArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1.5, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="PassedThroughDetectionArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 15 )

[node name="Post1" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
collision_mask = 0

[node name="MeshInstance" type="MeshInstance" parent="Post1"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="Post1"]
shape = SubResource( 17 )

[node name="Particles" type="Particles" parent="Post1"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
material_override = SubResource( 12 )
cast_shadow = 0
lifetime = 1.9
visibility_aabb = AABB( -0.0546689, -1.56297, -0.167035, 3.18934, 3.207, 0.334069 )
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="Barrier" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.5, 1.5, 0 )
collision_layer = 16
collision_mask = 0

[node name="EntrySideMesh" type="MeshInstance" parent="Barrier"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0236209, 0 )
mesh = SubResource( 7 )
skeleton = NodePath("../..")
material/0 = SubResource( 16 )

[node name="NoEntrySideMesh" type="MeshInstance" parent="Barrier"]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 8.74228e-08, -1, 8.74228e-08, -3.82137e-15, 8.74228e-08, 1, 0, -0.024, 0 )
mesh = SubResource( 7 )
skeleton = NodePath("../..")
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Barrier"]
shape = SubResource( 15 )

[node name="Post2" type="StaticBody" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3, 1.5, 0 )
collision_mask = 0

[node name="Particles" type="Particles" parent="Post2"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
material_override = SubResource( 12 )
cast_shadow = 0
amount = 14
lifetime = 1.9
visibility_aabb = AABB( -0.0546689, -1.56297, -0.167035, 3.18934, 3.207, 0.334069 )
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="Post2"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="Post2"]
shape = SubResource( 18 )

[connection signal="body_entered" from="EntryDetectionArea" to="." method="_on_entry_detection_area_body_entered"]
[connection signal="body_exited" from="EntryDetectionArea" to="." method="_on_entry_detection_area_body_exited"]
[connection signal="body_entered" from="PassedThroughDetectionArea" to="." method="_on_passed_through_detection_area_body_entered"]
[connection signal="body_exited" from="PassedThroughDetectionArea" to="." method="_on_passed_through_detection_area_body_exited"]
